samples/_failures_safe/1761474600_a0bf12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ffaf2f7.c: In function ‘analyze_text’:
./samples/SAFE/__tmp_6ffaf2f7.c:154:66: error: expected ‘)’ at end of input
  154 |             strncpy(result->most_frequent_word, ta->words[i].word
      |                    ~                                             ^
      |                                                                  )
./samples/SAFE/__tmp_6ffaf2f7.c:154:13: error: too few arguments to function ‘strncpy’
  154 |             strncpy(result->most_frequent_word, ta->words[i].word
      |             ^~~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_6ffaf2f7.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_6ffaf2f7.c:154:13: error: expected declaration or statement at end of input
  154 |             strncpy(result->most_frequent_word, ta->words[i].word
      |             ^~~~~~~
./samples/SAFE/__tmp_6ffaf2f7.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6ffaf2f7.c:154:13: error: expected declaration or statement at end of input
